--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <SEction class="main-video">
             <div class="video">
-                
+                <video src="video/video.mp4" autoplay loop></video>
             </div>
         </SEction>C
 
