Add WORK section without hyperlink

--- a/index.html
+++ b/index.html
@@ -59,19 +59,40 @@
                         <li><a href="#">CONTAC</a></li>
                     </ul>
                 </div>
-                
+
 
             </div>
 
 
         </div>
 
-        <SEction class="main-video">
+        <Section class="main-video">
             <div class="video">
                 <video src="video/video.mp4" autoplay loop></video>
             </div>
-        </SEction>C
+        </Section>
 
+        <!--
+            iNTRO
+        -->
+
+        <section class="intro">
+            <h2>LUOUD STORIES <br>EXEPTIONAL CRAFT</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea rerum accusantium, officia, quaerat dolores
+                facilis ipsum esse distinctio quae aliqu</p>
+        </section>
+
+        <!--
+            WORK
+        -->
+
+        <section>
+            <h2>WORK</h2>
+            <div class="grid work">
+
+            </div>
+        </section>
+    
 
     </div>
 </body>
